--- a/app/components/navbar.component/navbar.component.html
+++ b/app/components/navbar.component/navbar.component.html
@@ -7,11 +7,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Github Search</a>
+      <a class="navbar-brand" href="#">Angular 2 test app</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a routerLink ="/"  routerLinkActive="active" >Home</a></li>
+        <li><a routerLink ="/spotifySearch"  routerLinkActive="active">Spotify Search</a></li>
         <li><a routerLink ="/about"  routerLinkActive="active">About</a></li>
       </ul>
     </div>
